# CarbonPanel

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_sites.py  0003_starred_system_services.py  0004_app_labels.py  0005_webhooks.py  0006_devices_bookmarks_layouts_passkeys.py  0007_user_preferences.py  0008_encrypt_totp_secrets.py  0009_device_fingerprint.py  0010_onboarding.py  0011_drop_webauthn_credentials.py
backend/app/: config.py  database.py  main.py
backend/app/api/: apps.py  auth.py  background_images.py  bookmarks.py  cron.py  dashboard_layout.py  devices.py  disks.py  docker_api.py  metrics_history.py  passkeys.py  preferences.py  processes.py  router.py  sessions.py  settings.py  sites.py  system.py  webhooks.py  ws.py  ws_logs.py
backend/app/core/: broadcast.py  brute_force.py  crypto.py  dependencies.py  security.py
backend/app/models/: app_label.py  bookmark.py  dashboard_layout.py  device.py  site.py  starred_system_service.py  user.py  user_preferences.py  webauthn_credential.py  webhook.py
backend/app/schemas/: auth.py  metrics.py  sites.py
backend/app/scripts/: seed_admin.py
backend/app/services/: auth_service.py  background_image_service.py  cron_service.py  proxy_service.py  site_service.py  smart.py  update_runtime.py  webhook_service.py
backend/app/services/metrics/: collector.py  cpu.py  disk.py  gpu.py  memory.py  network.py  processes.py  system.py
docker/: nginx.conf  (+1 more)
(+82 files in other folders)
